# consumer_pyramids_manager

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/: .config.txt  foreman.py
src/consumer_pyramids_manager/: foreman.py
src/consumer_pyramids_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/consumer_pyramids_manager/builder/: builder.py
src/consumer_pyramids_manager/codebook/: codebook.py
src/consumer_pyramids_manager/configure/: configure.py
src/consumer_pyramids_manager/initializer/: initializer.py
tests/: test.py
